kubernetes/django-deployment-v2.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: django-deployment
  labels:
    app.kubernetes.io/name: django
    app.kubernetes.io/component: web
spec:
  replicas: 3
  selector:
    matchLabels:
      app.kubernetes.io/name: django
  template:
    metadata:
      labels:
        app.kubernetes.io/name: django
    spec:
      containers:
      - name: django
        image: docker.io/andrinho/django_app
