kubernetes/django-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: django-service
  labels:
    app.kubernetes.io/name: django
spec:
  selector:
    app.kubernetes.io/name: django
  type: NodePort
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
